@@ -25,6 +25,7 @@ BUG FIXES:
 +Fix middle mouse button not closing correct tab when notebook view has been split.
 +Fix some Unicode handling issues related to startup paths.
 +Fix error case in updating session storage schema from older versions of application.
++Fix file filters not working with find in current directory option.
 
 #-----------------------------------------------------------------------------#
 Changes since last release:
